--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GoogleSearchTop</string>
+
+    <string name="all_hint_search">Search</string>
+    <string name="all_desc_search">Search</string>
 </resources>
