Empty Search View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="all_hint_search">Search</string>
     <string name="all_desc_search">Search</string>
+
+    <string name="google_search_empty_results">Nothing found</string>
 </resources>
